<resources>
    <!-- Facebook -->
    <string name="facebook_app_id">573516649796516</string>
    <string name="fb_login_protocol_scheme">fb573516649796516</string>

    <!-- Common -->
    <string name="app_name">OApp</string>
    <string name="text_loading">Please Wait</string>
    <string name="text_loading_subtitle">Preparing content for you</string>
    <string name="text_loading_dialog_title">Loading...</string>
    <string name="text_loading_dialog_subtitle">Bringing you to the next level</string>
    <string name="text_loading_posting_dialog_title">Posting...</string>
    <string name="text_loading_posting_dialog_subtitle">Processing your thoughts</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_update">Update</string>
    <string name="text_select_photo">Select Photo</string>
    <string name="text_done">Done</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>
    <string name="text_login_here">Login here</string>
    <string name="text_hint_username">Username</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_name">Name</string>
    <string name="text_hint_phone_number">Phone Number</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_comments">Type your comments</string>
    <string name="text_hint_location">Location</string>
    <string name="text_hint_facebook">Facebook</string>
    <string name="text_hint_twitter">Twitter</string>
    <string name="text_hint_current_password">Current Password</string>
    <string name="text_hint_new_password">New Password</string>
    <string name="text_hint_re_type_new_password">Re-type New Password</string>
    <string name="text_hint_instagram">Instagram</string>
    <string name="text_already_have_account">Already have account?</string>
    <string name="text_error_submit_login">Please check your username and password correctly</string>
    <string name="text_error_submit_register">Please check your input  correctly</string>
    <string name="text_error_submit_name">Minimum name characters must be 6</string>
    <string name="text_error_submit_phone">Minimum username characters must be 11</string>
    <string name="text_error_submit_email">Invalid email</string>
    <string name="text_error_submit_username">Minimum username characters must be 6</string>
    <string name="text_error_submit_password">Minimum password characters must be 6</string>
    <string name="text_error_after_login">Unexpected things was happened</string>
    <string name="text_error_on_login">Unstable connection</string>
    <string name="text_error_register_already_existed">User has already existed</string>
    <string name="text_error_register_fetched">Registration failed</string>
    <string name="text_success_register">Your registration was succeed</string>
    <string name="text_update_failed">Update profile failed</string>
    <string name="text_update_succeed">Update profile succeed</string>
    <string name="text_menu_search">Search</string>
    <string name="text_menu_friend">Friend</string>
    <string name="text_menu_settings">Settings</string>
    <string name="text_menu_block_account">Block</string>
    <string name="text_sub_menu_setting">Setting</string>
    <string name="text_sub_menu_update_profile">Update Profile</string>
    <string name="text_label_comment">Comment</string>
    <string name="text_label_recently">recently</string>
    <string name="text_label_one_minute_ago">1 minute ago</string>
    <string name="text_label_minutes_ago">minutes ago</string>
    <string name="text_label_one_hour_ago">1 hour ago</string>
    <string name="text_label_hours_ago">hours ago</string>
    <string name="text_label_yesterday">yesterday</string>
    <string name="text_label_days_ago">days ago</string>
    <string name="text_label_dialog_request_dialog_title">We need your permission for getting your current location. Shall we?</string>
    <string name="text_label_title">Title</string>
    <string name="text_label_description">Description</string>
    <string name="text_label_note">Note</string>
    <string name="text_label_post">Post</string>
    <string name="text_label_title_is_empty">Title is empty</string>
    <string name="text_label_description_is_empty">Description is empty</string>
    <string name="text_label_note_is_empty">Note is empty</string>
    <string name="text_label_photo">PHOTO</string>
    <string name="text_label_video">VIDEO</string>
    <string name="text_label_text">TEXT</string>
    <string name="text_label_detail_header">Detail Post</string>
    <string name="text_label_update_profile_header">Update Profile</string>
    <string name="text_label_send">Send</string>
    <string name="text_label_error_posting">Failed posting your thoughts</string>
    <string name="text_label_verified">Verified</string>
    <string name="text_label_verify">Verify</string>
    <string name="text_label_people_around_you">People Around You</string>
    <string name="text_label_user_detail_info">What I Do</string>
    <string name="text_label_social_media">Social Media</string>
    <string name="text_label_header_user_profile">Profile</string>
    <string name="text_label_posted_items">Posted Items</string>
    <string name="text_label_create_comment_header">Create Comment</string>
    <string name="text_label_personal_information">Personal Information</string>
    <string name="text_label_my_profile">My Profile</string>
    <string name="text_update_profile_not_valid_phone">Please check your updated phone number</string>
    <string name="text_update_profile_not_valid_location">Please check your location</string>
    <string name="text_header_setting">Settings</string>
    <string name="text_label_setting_notification">Notification</string>
    <string name="text_label_setting_range_finder">Range Finder</string>
    <string name="text_label_setting_blocked_account">Blocked Account</string>
    <string name="text_label_setting_change_password">Change Password</string>
    <string name="text_label_setting_about">About</string>
    <string name="text_label_unblock">Unblock</string>
    <string name="text_label_distance_km">%d KM</string>
    <string name="text_label_empty_state_title">Great!</string>
    <string name="text_label_empty_state_description">You do not have blocked users</string>
    <string name="text_error_fail_to_unblock_user">Failed unblocking your friend. Try again!</string>
    <string name="text_error_fail_to_logout">Logout failed!</string>
    <string name="text_label_home_empty_state_title">It was quite!</string>
    <string name="text_label_home_empty_state_subtitle">Please move or refresh your feed.</string>
    <string name="text_error_get_posted_list">Fail getting posted list!</string>
    <string name="text_header_update_password">Update Password</string>
    <string name="text_error_all_fields_required">Oops! All fields are required.</string>
    <string name="text_error_current_password_invalid">Your current password is invalid.</string>
    <string name="text_error_new_password_same_with_existing">Your new password must be different with existing password.</string>
    <string name="text_error_retype_new_password">Please re-type your new password correctly.</string>
    <string name="text_default_profile_location">Your Location</string>
    <string name="text_default_profile_activity">Your Activity</string>
    <string name="text_empty_state_user_profile">You have never posted anything</string>
    <string name="text_update_avatar_succeed">Your profile photo was updated</string>
    <string name="text_update_avatar_failed">An error occurred while taking your photo</string>
    <string name="text_update_password_succeed">Your password was changed</string>
    <string name="text_unexpected_error_change_password">An error occurred while updating your password</string>
    <string name="text_notification_channel_id">com.app.o.notification</string>
    <string name="text_notification_channel_name">OApp Push Notification</string>
    <string name="text_notification_list_header">Notification List</string>
    <string name="text_header_pick_video_from_gallery">Select Video</string>
    <string name="text_error_get_notification_list">Failed getting notification list</string>
    <string name="text_error_set_notification_as_read">Failed updating your notification</string>
    <string name="text_registration_token">Registration Token</string>
    <string name="text_action_type_registration_label">Activation Type</string>
    <string name="text_registration_token_header">Input Registration Token</string>
    <string name="text_registration_token_via_email">Registration Token From Email</string>
    <string name="text_registration_token_via_sms">Registration Token From SMS</string>
    <string name="text_registration_option_email">Email</string>
    <string name="text_registration_option_sms">SMS</string>
    <string name="text_registration_token_resend_footer">Still have not got your registration token?</string>
    <string name="text_registration_token_resend_footer_click_here"><u>Click here</u>.</string>
    <string name="text_registration_token_validation_failed">Failed verifying your token</string>

    <string name="text_block_user_progress">Blocking your connection..</string>
    <string name="text_block_user_success">You have blocked your connection. Bye!</string>
    <string name="text_block_user_failed">An error occurred while was blocking your connection.</string>

    <!-- Plural -->
    <plurals name="numberOfReplies">
        <item quantity="one">%d reply</item>
        <item quantity="other">%d replies</item>
    </plurals>
    <plurals name="numberOfConnectedUsers">
        <item quantity="one">%d Connected User</item>
        <item quantity="other">%d Connected Users</item>
    </plurals>
</resources>
