<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_root_blocked_account"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dip_8">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_blocked_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:clipToPadding="false"
        android:scrollbars="vertical" />
    <com.app.o.custom.ProgressBarWithText
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:progressTitle="@string/text_loading"
        app:progressSubTitle="@string/text_loading_subtitle"/>
    <LinearLayout
        android:id="@+id/layout_group_empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_title_empty_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@android:color/black"
            android:text="@string/text_label_empty_state_title"/>
        <TextView
            android:id="@+id/text_description_title_empty_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/colorGrey"
            android:text="@string/text_label_empty_state_description"/>
    </LinearLayout>
</RelativeLayout>