<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <ImageView
        android:layout_width="@dimen/dip_240"
        android:layout_height="@dimen/dip_240"
        android:src="@drawable/ic_logo"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dip_16"
        android:layout_marginRight="@dimen/dip_16"
        android:layout_marginBottom="@dimen/dip_16">
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_soft_green"
            android:text="@string/text_sign_up"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            app:elevation="@dimen/dip_4"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dip_8"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip_8"
                android:textColor="@color/colorGreen2"
                android:text="@string/text_already_have_account"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip_8"
                android:layout_marginLeft="@dimen/dip_8"
                android:layout_marginStart="@dimen/dip_8"
                android:text="@string/text_login_here"
                android:textColor="@color/colorGrey"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>