<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_root_update_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dip_16">
        <LinearLayout
            android:id="@+id/layout_group_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip_16"
            android:background="@drawable/bg_rounded_border"
            android:orientation="horizontal"
            android:padding="@dimen/dip_12">
            <EditText
                android:id="@+id/input_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/sp_12"
                android:inputType="textPassword"
                android:hint="@string/text_hint_current_password"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_group_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip_8"
            android:background="@drawable/bg_rounded_border"
            android:orientation="horizontal"
            android:padding="@dimen/dip_12">
            <EditText
                android:id="@+id/input_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/sp_12"
                android:inputType="textPassword"
                android:hint="@string/text_hint_new_password"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_group_retype_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip_8"
            android:background="@drawable/bg_rounded_border"
            android:orientation="horizontal"
            android:padding="@dimen/dip_12">
            <EditText
                android:id="@+id/input_retype_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/sp_12"
                android:inputType="textPassword"
                android:hint="@string/text_hint_re_type_new_password"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <Button
            android:id="@+id/button_update_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_soft_green"
            android:layout_marginTop="@dimen/dip_16"
            android:text="@string/text_update"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            app:elevation="@dimen/dip_4"/>
    </LinearLayout>
</ScrollView>