<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_root_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/view_layout_multimedia"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_180"
            android:background="@color/colorWhiteSmoke">
            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager_selected_images"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <VideoView
                android:id="@+id/video_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/image_preview_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_2"
            android:background="@color/colorWhiteSmoke"/>
        <EditText
            android:id="@+id/input_title_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip_24"
            android:layout_marginLeft="@dimen/dip_12"
            android:layout_marginRight="@dimen/dip_12"
            android:layout_marginBottom="@dimen/dip_12"
            android:textSize="@dimen/sp_12"
            android:hint="@string/text_label_title"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_2"
            android:background="@color/colorWhiteSmoke"/>
        <EditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dip_12"
            android:textSize="@dimen/sp_12"
            android:hint="@string/text_label_description"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_2"
            android:background="@color/colorWhiteSmoke"/>
        <EditText
            android:id="@+id/input_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dip_12"
            android:textSize="@dimen/sp_12"
            android:hint="@string/text_label_note"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_2"
            android:background="@color/colorWhiteSmoke"/>
        <Button
            android:id="@+id/button_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_soft_green"
            android:layout_marginTop="@dimen/dip_24"
            android:layout_marginLeft="@dimen/dip_12"
            android:layout_marginRight="@dimen/dip_12"
            android:layout_marginBottom="@dimen/dip_12"
            android:text="@string/text_label_post"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            app:elevation="@dimen/dip_4"/>
    </LinearLayout>
</ScrollView>