<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.app.o.custom.ProgressBarWithText
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:progressTitle="@string/text_loading"
        app:progressSubTitle="@string/text_loading_subtitle"/>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/layout_group_scroll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:padding="@dimen/dip_16"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dip_8"
                android:layout_marginStart="@dimen/dip_8"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_user_detail_profile"
                    android:layout_width="@dimen/dip_80"
                    android:layout_height="@dimen/dip_80"
                    android:layout_gravity="center_horizontal"
                    app:civ_border_width="@dimen/dip_2"
                    app:civ_border_color="@color/colorWhiteSmoke"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dip_16"
                    android:layout_marginStart="@dimen/dip_16"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/text_user_detail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dip_12"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/dip_4">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_vector_pin_location" />
                        <TextView
                            android:id="@+id/text_user_location_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dip_8"
                            android:layout_marginStart="@dimen/dip_8"
                            android:text="@string/text_default_profile_location"
                            android:textSize="@dimen/sp_14"
                            android:textColor="@color/colorGrey" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip_16"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorGrey"
                        android:textSize="@dimen/sp_12"
                        android:text="@string/text_label_user_detail_info"/>
                    <TextView
                        android:id="@+id/text_user_detail_additional_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dip_4"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_default_profile_activity"
                        android:textColor="@color/colorGreen2"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:paddingLeft="@dimen/dip_2"
                    android:paddingRight="@dimen/dip_2">
                    <View
                        android:layout_width="@dimen/dip_1"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dip_2"
                        android:layout_marginBottom="@dimen/dip_2"
                        android:background="@color/colorGrey"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorGrey"
                        android:textSize="@dimen/sp_12"
                        android:text="@string/text_label_social_media"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dip_4"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_vector_social_media_facebook"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dip_4"
                            android:layout_marginStart="@dimen/dip_4"
                            app:srcCompat="@drawable/ic_vector_social_media_twitter"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dip_4"
                            android:layout_marginStart="@dimen/dip_4"
                            app:srcCompat="@drawable/ic_vector_social_media_instagram"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/text_empty_state_have_no_posted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dip_36"
                android:visibility="gone"
                android:textSize="@dimen/sp_14"
                android:textColor="@android:color/black"
                android:text="@string/text_empty_state_user_profile"/>
            <LinearLayout
                android:id="@+id/layout_group_profile_user_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip_12"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@android:color/black"
                    android:text="@string/text_label_posted_items"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_posted_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dip_4"
                    android:clipToPadding="false"
                    android:scrollbars="vertical" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>